Minor bug fix
Fixed bug reported by Dominika in prize table and reduced font size
(some questions would not fit screen)

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html, body, button {
     font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 32px;
+    font-size: 24px;
     margin: 0px;
 }
 
